[package]
name = "opaque-vpn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
etherparse = "0.16.0"
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["net", "rt", "sync"] }
tokio-rustls = "0.26.1"
tun = { version = "0.7.10", features = ["async"] }
yaml-rust = "0.4.5"
