[package]
name = "opaque-vpn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
ctrlc = "3.4.5"
env_logger = "0.11.6"
etherparse = "0.18.0"
futures = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["net", "rt", "sync"] }
tokio-rustls = "0.26.1"
tokio-util = { version = "0.7.15", features = ["compat"] }
toml = "0.8.19"
tun = { version = "0.8.0", features = ["async"] }
